--- a/css/style.css
+++ b/css/style.css
@@ -316,9 +316,12 @@ footer hr {
 }
 
 #contact-section .heading h1 {
-  margin-top: 20px;
+  margin-top: 5px;
 }
 
+.img-box {
+	margin: 35px 0;
+}
 /* signup */
 
 /* Hide all steps by default: */
